left_sidebar: Correct filter-input scrollbar artifact.

--- a/web/styles/left_sidebar.css
+++ b/web/styles/left_sidebar.css
@@ -1081,7 +1081,7 @@ li.top_left_scheduled_messages {
 
         .input {
             white-space: nowrap;
-            overflow-x: hidden;
+            overflow: hidden;
             text-overflow: ellipsis;
         }
     }
